--- a/ppt/ustc.tex
+++ b/ppt/ustc.tex
@@ -70,7 +70,8 @@ abc
 \end{itemize}
 \end{frame}
 %%---------------------------------------------------------------------------------------------------
-\begin{frame}\frametitle{定理}
+\begin{frame}
+\frametitle{定理}
 \begin{lemma}[1]
 这是一个定理，引理类似。
 \end{lemma}
