My personal latex template

--- a/ppt/RB/tree.tex
+++ b/ppt/RB/tree.tex
@@ -7,13 +7,25 @@
 \begin{document} %申明文档的开始
 \begin{CJK}{UTF8}{gbsn}     %CJK:支持中文
 
-	\title{}
+	\title{树相关问题拾遗}
 	\author{胡庆海}
 	\date{}
 
     \begin{frame}
-        \frametitle{主要内容}
+        \frametitle{主要问题}
     \end{frame}
+
+	\begin{frame}
+		\frametitle{最近公共祖先问题}
+	\end{frame}
+
+	\begin{frame}
+		\frametitle{树中最长路径}
+	\end{frame}
+
+	\begin{frame}
+		\frametitle{任意两节点之间距离/路径问题}
+	\end{frame}
 
 \end{CJK}
 \end{document}
