--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,7 +1,11 @@
-\documentclass{book}
+\documentclass[oneside]{book}
 \usepackage{CJK}
 \usepackage{verbatim}
 \usepackage{amsmath}
+\usepackage{titlesec}
+\usepackage{fancyhdr} %页眉页脚布局
+\usepackage{tocloft} % 目录相关
+
 
 %%%代码
 \usepackage{color}
@@ -32,6 +36,33 @@
 \usepackage[colorlinks,linkcolor=black,anchorcolor=blue,citecolor=green,CJKbookmarks=true]{hyperref}
 \begin{document}
 \begin{CJK}{UTF8}{gbsn}     %CJK:支持中文
+
+%%文章中章节等转化为中文
+\renewcommand{\contentsname}{目录}
+\renewcommand{\figurename}{图}
+\renewcommand{\tablename}{表}
+\titleformat{\chapter}{\centering\Huge\bfseries}{第\,\thechapter\,章}{1em}{}
+%%
+
+%%目录中章节
+\renewcommand{\cftchapfont}{\bfseries}
+\renewcommand{\cftchappagefont}{\bfseries}
+\renewcommand{\cftchappresnum}{第}
+\renewcommand{\cftchapaftersnum}{章:}
+\renewcommand{\cftchapnumwidth}{4em}      %  add 'chapter' word before number
+%%
+
+%%布局
+\pagestyle{fancy}
+\renewcommand{\chaptermark}[1]{\markboth{\small 第\,\thechapter\,章\quad #1}{}}
+\renewcommand{\sectionmark}[1]{\markright{\small\thesection\quad #1}{}}
+\fancyhf{}
+\fancyhead[ER]{\leftmark}
+\fancyhead[OL]{\rightmark}
+\fancyhead[EL,OR]{$\cdot$\ \thepage\ $\cdot$}
+\renewcommand{\headrulewidth}{0.4pt}
+%%
+
 \title{我的解题报告}
 \author{胡庆海}
 \date{}
@@ -41,10 +72,10 @@
 %\newpage
 \tableofcontents
 
-\chapter{第一章： 链表}
+\chapter{链表}
 \input{chap1/chap1.tex}
 
-\chapter{第二章： 树}
+\chapter{树}
 \input{chap2/chap2.tex}
 
 \end{CJK}
