--- a/doc/greedy/main.tex
+++ b/doc/greedy/main.tex
@@ -28,22 +28,15 @@
 
 \else
 
-\subsection{Integer to Roman}
-\input{chap3/chap3-3/Integer_to_Roman.tex}
-\subsection{Roman to Integer}
-\input{chap3/chap3-3/Roman_To_Integer.tex}
-\subsection{Longest Common Prefix}
-\input{chap3/chap3-3/Longest_Common_Prefix.tex}
-\subsection{Count and Say}
-\input{chap3/chap3-3/Count_and_Say.tex}
-\subsection{Add Binary}
-\input{chap3/chap3-3/Add_Binary.tex}
-\subsection{ZigZag Conversion}
-\input{chap3/chap3-3/ZigZag_Conversion.tex}
-\subsection{Length of Last Word}
-\input{chap3/chap3-3/Length_of_Last_Word.tex}
-\subsection{Text Justification}
-\input{chap3/chap3-3/Text_Justification.tex}
+\section{基本概念}
+\input{greedy/section1/main.tex}
+\newpage
+\section{经典问题}
+\input{greedy/section2/main.tex}
+\newpage
+\section{相关问题}
+\input{greedy/section3/main.tex}
+\newpage
 
 \fi
 
