--- a/doc/greedy/section1/tmp.tex
+++ b/doc/greedy/section1/tmp.tex
@@ -1,6 +1,7 @@
 \ifx allfiles undefined
 \documentclass{article}
 \usepackage{CJK}
+\usepackage{verbatim}
 
 %%%代码
 \usepackage{color}
@@ -27,23 +28,15 @@
 \begin{CJK}{UTF8}{gbsn}     %CJK:支持中文
 
 \else
-
-\subsection{Integer to Roman}
-\input{chap3/chap3-3/Integer_to_Roman.tex}
-\subsection{Roman to Integer}
-\input{chap3/chap3-3/Roman_To_Integer.tex}
-\subsection{Longest Common Prefix}
-\input{chap3/chap3-3/Longest_Common_Prefix.tex}
-\subsection{Count and Say}
-\input{chap3/chap3-3/Count_and_Say.tex}
-\subsection{Add Binary}
-\input{chap3/chap3-3/Add_Binary.tex}
-\subsection{ZigZag Conversion}
-\input{chap3/chap3-3/ZigZag_Conversion.tex}
-\subsection{Length of Last Word}
-\input{chap3/chap3-3/Length_of_Last_Word.tex}
-\subsection{Text Justification}
-\input{chap3/chap3-3/Text_Justification.tex}
+    
+\begin{description}
+    \item{\textbf{问题}}: Given a binary tree, return the postorder traversal of its nodes' values. \textit{(leetcode 145)}
+    \item{\textbf{}} : \fbox{时间复杂度 , 空间复杂度O}
+    \\
+    \begin{lstlisting}
+    \end{lstlisting}
+    \textit{}
+\end{description}
 
 \fi
 
