--- a/doc/greedy/section3/main.tex
+++ b/doc/greedy/section3/main.tex
@@ -27,25 +27,24 @@
 \begin{CJK}{UTF8}{gbsn}     %CJK:支持中文
 
 \else
-
-\subsection{Integer to Roman}
-\input{chap3/chap3-3/Integer_to_Roman.tex}
-\subsection{Roman to Integer}
-\input{chap3/chap3-3/Roman_To_Integer.tex}
-\subsection{Longest Common Prefix}
-\input{chap3/chap3-3/Longest_Common_Prefix.tex}
-\subsection{Count and Say}
-\input{chap3/chap3-3/Count_and_Say.tex}
-\subsection{Add Binary}
-\input{chap3/chap3-3/Add_Binary.tex}
-\subsection{ZigZag Conversion}
-\input{chap3/chap3-3/ZigZag_Conversion.tex}
-\subsection{Length of Last Word}
-\input{chap3/chap3-3/Length_of_Last_Word.tex}
-\subsection{Text Justification}
-\input{chap3/chap3-3/Text_Justification.tex}
-
+    
+\qquad贪心算法还有很多应用场景，下面介绍几种常见的题目.
+\\
 \fi
+\subsection{Jump Game}
+\input{greedy/section3/JumpGame.tex}
+\subsection{Jump Game II}
+\input{greedy/section3/JumpGameII.tex}
+\subsection{Gas Station}
+\input{greedy/section3/Gas_Station.tex}
+\subsection{Candy}
+\input{greedy/section3/Candy.tex}
+\subsection{Best Time to Buy and Sell Stock I}
+\input{greedy/section3/Best_Time_to_Buy_and_Sell_Stock_I.tex}
+\subsection{Best Time to Buy and Sell Stock II}
+\input{greedy/section3/Best_Time_to_Buy_and_Sell_Stock_II.tex}
+\subsection{Container With Most Water}
+\input{greedy/section3/Container_With_Most_Water.tex}
 
 \ifx allfiles undefined
 \end{CJK}
