--- a/doc/greedy/section2/main.tex
+++ b/doc/greedy/section2/main.tex
@@ -27,23 +27,8 @@
 \begin{CJK}{UTF8}{gbsn}     %CJK:支持中文
 
 \else
-
-\subsection{Integer to Roman}
-\input{chap3/chap3-3/Integer_to_Roman.tex}
-\subsection{Roman to Integer}
-\input{chap3/chap3-3/Roman_To_Integer.tex}
-\subsection{Longest Common Prefix}
-\input{chap3/chap3-3/Longest_Common_Prefix.tex}
-\subsection{Count and Say}
-\input{chap3/chap3-3/Count_and_Say.tex}
-\subsection{Add Binary}
-\input{chap3/chap3-3/Add_Binary.tex}
-\subsection{ZigZag Conversion}
-\input{chap3/chap3-3/ZigZag_Conversion.tex}
-\subsection{Length of Last Word}
-\input{chap3/chap3-3/Length_of_Last_Word.tex}
-\subsection{Text Justification}
-\input{chap3/chap3-3/Text_Justification.tex}
+    
+\qquad贪心算法经典问题像Huffman树，最小生成树，Dijkstra算法, 0-1部分背包问题等等.
 
 \fi
 
