--- a/doc/main.tex
+++ b/doc/main.tex
@@ -99,8 +99,8 @@
 \chapter{贪心}
 \input{greedy/main.tex}
 
-%\chapter{动态规划}
-%\input{chap3/chap3.tex}
+\chapter{动态规划}
+\input{dp/main.tex}
 
 
 \end{CJK}
