--- a/doc/dp/section2/main.tex
+++ b/doc/dp/section2/main.tex
@@ -33,6 +33,8 @@
 \input{dp/section2/Maximum_Subarray.tex}
 \subsection{Maximal Rectangle}
 \input{dp/section2/Maximal_Rectangle.tex}
+\subsection{Triangle}
+\input{dp/section2/Triangle.tex}
 
 \fi
 
