--- a/doc/dp/section3/main.tex
+++ b/doc/dp/section3/main.tex
@@ -43,6 +43,14 @@
 \input{dp/section3/Climbing_Stairs.tex}
 \subsection{Scramble String}
 \input{dp/section3/Scramble_String.tex}
+\subsection{Decode Ways}
+\input{dp/section3/Decode_Ways.tex}
+\subsection{Interleaving String}
+\input{dp/section3/Interleaving_String.tex}
+\subsection{Distinct Subsequences}
+\input{dp/section3/Distinct_Subsequences.tex}
+\subsection{Best Time to Buy and Sell Stock III}
+\input{dp/section3/Best_Time_to_Buy_and_Sell_Stock_III.tex}
 
 \ifx allfiles undefined
 \end{CJK}
