--- a/doc/dp/section3/main.tex
+++ b/doc/dp/section3/main.tex
@@ -51,6 +51,14 @@
 \input{dp/section3/Distinct_Subsequences.tex}
 \subsection{Best Time to Buy and Sell Stock III}
 \input{dp/section3/Best_Time_to_Buy_and_Sell_Stock_III.tex}
+\subsection{Palindrome Partitioning II}
+\input{dp/section3/Palindrome_Partitioning_II.tex}
+\subsection{Word Break}
+\input{dp/section3/Word_Break.tex}
+\subsection{Word Break II}
+\input{dp/section3/Word_Break_II.tex}
+\subsection{Maximum Product Subarray}
+\input{dp/section3/Maximum_Product_Subarray.tex}
 
 \ifx allfiles undefined
 \end{CJK}
