--- a/doc/main.tex
+++ b/doc/main.tex
@@ -93,6 +93,9 @@
 %\chapter{排序}
 %\input{chap3/chap3.tex}
 
+\chapter{二分查找}
+\input{binary_search/main.tex}
+
 %\chapter{分治}
 %\input{chap3/chap3.tex}
 
