--- a/doc/main.tex
+++ b/doc/main.tex
@@ -87,16 +87,16 @@
 \chapter{字符串}
 \input{chap3/chap3.tex}
 
-%\chapter{搜索与回溯}
-%\input{chap3/chap3.tex}
-
-%\chapter{排序}
-%\input{chap3/chap3.tex}
+\chapter{排序}
+\input{sort/main.tex}
 
 \chapter{二分查找}
 \input{binary_search/main.tex}
 
 %\chapter{分治}
+%\input{chap3/chap3.tex}
+
+%\chapter{搜索与回溯}
 %\input{chap3/chap3.tex}
 
 \chapter{贪心}
