--- a/doc/main.tex
+++ b/doc/main.tex
@@ -96,14 +96,20 @@
 %\chapter{分治}
 %\input{chap3/chap3.tex}
 
-%\chapter{搜索与回溯}
-%\input{chap3/chap3.tex}
+%\chapter{搜索}
+%\input{search/main.tex}
+
+\chapter{回溯}
+\input{backtrack/main.tex}
 
 \chapter{贪心}
 \input{greedy/main.tex}
 
 \chapter{动态规划}
 \input{dp/main.tex}
+
+%\chapter{位操作}
+%\input{bit/main.tex}
 
 
 \end{CJK}
