--- a/doc/backtrack/section3/main.tex
+++ b/doc/backtrack/section3/main.tex
@@ -16,3 +16,15 @@
 \input{backtrack/section3/Permutations.tex}
 \subsection{Permutations II}
 \input{backtrack/section3/Permutations_II.tex}
+\subsection{Permutation Sequence}
+\input{backtrack/section3/Permutation_Sequence.tex}
+\subsection{Combinations}
+\input{backtrack/section3/Combinations.tex}
+\subsection{Subsets}
+\input{backtrack/section3/Subsets.tex}
+\subsection{Subsets II}
+\input{backtrack/section3/Subsets_II.tex}
+\subsection{Word Search}
+\input{backtrack/section3/Word_Search.tex}
+\subsection{Gray Code}
+\input{backtrack/section3/Gray_Code.tex}
