add backtrack part 3 and bfs

--- a/doc/backtrack/section3/main.tex
+++ b/doc/backtrack/section3/main.tex
@@ -28,3 +28,7 @@
 \input{backtrack/section3/Word_Search.tex}
 \subsection{Gray Code}
 \input{backtrack/section3/Gray_Code.tex}
+\subsection{Restore IP Addresses}
+\input{backtrack/section3/Restore_IP_Addresses.tex}
+\subsection{Palindrome Partitioning}
+\input{backtrack/section3/Palindrome_Partitioning.tex}
