--- a/doc/main.tex
+++ b/doc/main.tex
@@ -96,8 +96,8 @@
 %\chapter{分治}
 %\input{chap3/chap3.tex}
 
-%\chapter{搜索}
-%\input{search/main.tex}
+\chapter{搜索}
+\input{search/main.tex}
 
 \chapter{回溯}
 \input{backtrack/main.tex}
