add bit manipulation

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -108,8 +108,8 @@
 \chapter{动态规划}
 \input{dp/main.tex}
 
-%\chapter{位操作}
-%\input{bit/main.tex}
+\chapter{位操作}
+\input{bit/main.tex}
 
 
 \end{CJK}
