--- a/doc/main.tex
+++ b/doc/main.tex
@@ -87,6 +87,18 @@
 \chapter{字符串}
 \input{chap3/chap3.tex}
 
+%\chapter{数组}
+%\input{array/main.tex}
+
+\chapter{栈}
+\input{stack/main.tex}
+
+%\chapter{图}
+%\input{graph/main.tex}
+
+%\chapter{高级数据结构}
+%\input{struct/main.tex}
+
 \chapter{排序}
 \input{sort/main.tex}
 
@@ -111,6 +123,8 @@
 \chapter{位操作}
 \input{bit/main.tex}
 
+%\chapter{数学}
+%\input{math/main.tex}
 
 \end{CJK}
 \end{document}
