add other struct

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -96,8 +96,8 @@
 %\chapter{图}
 %\input{graph/main.tex}
 
-%\chapter{高级数据结构}
-%\input{struct/main.tex}
+\chapter{其他数据结构}
+\input{struct/main.tex}
 
 \chapter{排序}
 \input{sort/main.tex}
