--- a/doc/struct/trie/tmp.tex
+++ b/doc/struct/trie/tmp.tex
@@ -1,6 +1,6 @@
     
 \begin{description}
-    \item{\textbf{问题}}:\\
+    \item{\textbf{问题}}://
 \textit{(leetcode 145)}
     \item{\textbf{}} : \fbox{时间复杂度 , 空间复杂度O}
     \\
