--- a/doc/main.tex
+++ b/doc/main.tex
@@ -93,8 +93,8 @@
 \chapter{栈}
 \input{stack/main.tex}
 
-%\chapter{图}
-%\input{graph/main.tex}
+\chapter{图}
+\input{graph/main.tex}
 
 \chapter{其他数据结构}
 \input{struct/main.tex}
