--- a/doc/stack/section3/Trapping_Rain_Water.tex
+++ b/doc/stack/section3/Trapping_Rain_Water.tex
@@ -4,7 +4,7 @@
 Given n non-negative integers representing an elevation map where the width of each bar is 1, compute how much water it is able to trap after raining.\\
 \textit{(leetcode 42)}
     \item{\textbf{举例}}:\\
-Given [0,1,0,2,1,0,1,3,2,1,2,1], return 6.
+Given [0,1,0,2,1,0,1,3,2,1,2,1], return 6. \\
 \includegraphics{stack/section3/rainwatertrap.eps}
     \item{\textbf{栈}} : \fbox{时间复杂度O(n), 空间复杂度O(n)}
     \\这道题可以这样想，依次遍历$a_1, a_2, ..., a_n$如果$a_i \le a_{i-1}$那么加入到栈中；反之，进行弹栈处理，因为$a_i > a_{i-1} \le a_{i-2}$所以可以计算$a_{i-1}$处的积水，依次类推.
