--- a/doc/main.tex
+++ b/doc/main.tex
@@ -99,6 +99,9 @@
 \chapter{图}
 \input{graph/main.tex}
 
+%\chapter{哈希}
+%\input{hash/main.tex}
+
 \chapter{其他数据结构}
 \input{struct/main.tex}
 
@@ -126,8 +129,8 @@
 \chapter{位操作}
 \input{bit/main.tex}
 
-%\chapter{数学}
-%\input{math/main.tex}
+\chapter{数学}
+\input{math/main.tex}
 
 \end{CJK}
 \end{document}
