--- a/doc/bit/section3/main.tex
+++ b/doc/bit/section3/main.tex
@@ -12,3 +12,5 @@
 \input{bit/section3/Number_of_1_Bits.tex}
 \subsection{Bitwise AND of Numbers Range}
 \input{bit/section3/Bitwise_AND_of_Numbers_Range.tex}
+\subsection{Repeated DNA Sequences}
+\input{bit/section3/Repeated_DNA_Sequences.tex}
