--- a/doc/main.tex
+++ b/doc/main.tex
@@ -99,8 +99,8 @@
 \chapter{图}
 \input{graph/main.tex}
 
-%\chapter{哈希}
-%\input{hash/main.tex}
+\chapter{哈希}
+\input{hash/main.tex}
 
 \chapter{其他数据结构}
 \input{struct/main.tex}
