--- a/doc/binary_search/section3/main.tex
+++ b/doc/binary_search/section3/main.tex
@@ -33,6 +33,8 @@
 \fi
 \subsection{Median of Two Sorted Arrays}
 \input{binary_search/section3/Median_of_Two_Sorted_Arrays.tex}
+\subsection{3Sum Closest}
+\input{binary_search/section3/3Sum_Closest.tex}
 \subsection{Search in Rotated Sorted Array}
 \input{binary_search/section3/Search_in_Rotated_Sorted_Array.tex}
 \subsection{Search in Rotated Sorted Array II}
