--- a/doc/hash/section3/main.tex
+++ b/doc/hash/section3/main.tex
@@ -7,3 +7,11 @@
 \input{hash/section3/Isomorphic_Strings.tex}
 \subsection{Contains Duplicate}
 \input{hash/section3/Contains_Duplicate.tex}
+\subsection{Two Sum}
+\input{hash/section3/Two_Sum.tex}
+\subsection{3Sum}
+\input{hash/section3/3Sum.tex}
+\subsection{4Sum}
+\input{hash/section3/4Sum.tex}
+\subsection{Longest Consecutive Sequence}
+\input{hash/section3/Longest_Consecutive_Sequence.tex}
