--- a/doc/main.tex
+++ b/doc/main.tex
@@ -73,7 +73,7 @@
 %%
 
 \title{我的解题报告}
-\author{胡庆海}
+\author{ \\ \\ \\ \\ \\ \\ 胡庆海 \\ \\ Email: ustc.sosohu@gmail.com \\ Blog: \href{https://sosohu.github.io}{sosohu.github.io}}
 \date{}
 
 \maketitle
@@ -90,10 +90,10 @@
 \chapter{字符串}
 \input{chap3/chap3.tex}
 
-%\chapter{数组}
-%\input{array/main.tex}
+\chapter{数组}
+\input{array/main.tex}
 
-\chapter{栈}
+\chapter{栈和队列}
 \input{stack/main.tex}
 
 \chapter{图}
