--- a/doc/math/section2/main.tex
+++ b/doc/math/section2/main.tex
@@ -5,3 +5,5 @@
 \input{math/section2/Lcm.tex}
 \subsection{Prime Number}
 \input{math/section2/Prime_Number.tex}
+\subsection{Next Permutation}
+\input{math/section2/Next_Permutation.tex}
