--- a/doc/dp/section2/main.tex
+++ b/doc/dp/section2/main.tex
@@ -35,6 +35,8 @@
 \input{dp/section2/Maximal_Rectangle.tex}
 \subsection{Triangle}
 \input{dp/section2/Triangle.tex}
+\subsection{House Robber}
+\input{dp/section2/House_Robber.tex}
 
 \fi
 
